# websocketclient-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  README.rst  dev_install.sh  vcpkg.json
.devcontainer/: devcontainer.json
.devcontainer/clang/: Dockerfile  devcontainer.json
.devcontainer/gcc/: Dockerfile  devcontainer.json
bench/: CMakeLists.txt  bench_mask_frame.py  cpu_utils.hpp  mask_frame.cpp  measure_elapsed.cpp  random.cpp  timeofday.cpp  variant.cpp
coroio/: corochain.hpp  poll.cpp  resolver.cpp  select.cpp  socket.hpp  sockutils.cpp  sockutils.hpp  ssl.hpp
examples/: CMakeLists.txt  ex_binance_asio.cpp  ex_binance_coroio.cpp  ex_binance_sync.cpp  ex_echo_asio.cpp  ex_echo_custom_logger.cpp  ex_echo_sync.cpp  ex_hello.cpp  ex_hello_ws.cpp  ex_hello_wss.cpp  ex_reconnect_asio.cpp  run_hello_server.py  run_ws_server.py  run_wss_server.py
examples/asio/: CMakeLists.txt  ex_binance_asio.cpp  ex_can_read_asio.cpp  ex_cancel_asio.cpp  ex_echo_asio.cpp  ex_reconnect_asio.cpp
examples/builtin/: CMakeLists.txt  ex_binance_builtin.cpp  ex_binance_sync.cpp  ex_custom_logger.cpp  ex_custom_logger_builtin.cpp  ex_custom_logger_sync.cpp  ex_echo_builtin.cpp  ex_echo_custom_logger.cpp  ex_echo_sync.cpp  ex_hello_ws.cpp  ex_hello_ws_builtin.cpp  ex_hello_wss.cpp  ex_hello_wss_builtin.cpp  ex_hello_wss_sync.cpp  ex_reconnect_builtin.cpp  ex_reconnect_sync.cpp  ex_wait_message_wss_builtin.cpp
examples/certs/: cert.pem  cmd.txt  key.pem
examples/coroio/: CMakeLists.txt  ex_binance_coroio.cpp
include/coroio/: all.hpp  epoll.cpp  socket.cpp  sockutils.hpp
include/ws_client/: Buffer.hpp  BufferedSocket.hpp  BufferedSocketAsync.hpp  Frame.hpp  Handshake.hpp  HasBufferOperations.hpp  HttpHeader.hpp  HttpParser.hpp  MaskKey.hpp  Message.hpp  PermessageDeflate.hpp  URL.hpp  WebSocketClient.hpp  WebSocketClientAsync.hpp  WebSocketClientAsyncOld.hpp  close_code.hpp  concepts.hpp  concepts_async.hpp  config.hpp  errors.hpp  errors_async.hpp  log.hpp  ws_client.hpp  ws_client_async.hpp
include/ws_client/transport/: AsioSocket.hpp  CoroioSocket.hpp  HasSocketOperations.hpp  HasSocketOperationsAsync.hpp  ISocket.hpp  ISocketAsync.hpp  ssl_utils.hpp
include/ws_client/transport/builtin/: AddressInfo.hpp  DnsResolver.hpp  OpenSslContext.hpp  OpenSslSocket.hpp  OpenSslSocket.hpp_  TcpSocket.hpp
include/ws_client/utils/: CircularBuffer.hpp  SHA1.hpp  Timeout.hpp  base64.hpp  networking.hpp  random.hpp  string.hpp  utf8.hpp
scratch/: CMakeLists.txt  asio_http.cpp  asio_seq_strand.cpp  test_DnsResolver.cpp  test_asio_http.cpp  test_asio_ws_client.cpp  test_coroio_bench.cpp  test_coroio_http.cpp  test_coroio_resolver.cpp  test_coroio_ws_client.cpp  test_getaddrinfo_a.cpp  test_openssl.cpp  test_photon_http.cpp  test_wolfssl.cpp
tests/: CMakeLists.txt  compare_durations.py  run_test_close.sh  test_close.py  test_close_AsioSocket.cpp  test_close_OpenSslSocket.cpp
tests/autobahn/: CMakeLists.txt  autobahn_asio.cpp  autobahn_builtin.cpp  autobahn_coroio.cpp  autobahn_sync.cpp  start_server.sh
tests/autobahn/config/: fuzzingserver.json
tests/autobahn/reports_summary/: index.html
tests/certs/: cert.pem  cmd.txt  key.pem
tests/close/: CMakeLists.txt  run_test_close.sh  test_close_server.py  test_close_server_asio.cpp  test_close_server_builtin_ssl.cpp
tests/impl/: Buffer.cpp  HttpHeader.cpp  HttpParser.cpp  MaskKey.cpp  PermessageDeflate.cpp  URL.cpp
tests/impl/utils/: CircularBuffer.cpp  base64.cpp  string.cpp
triplets/: x64-linux-libcxx.cmake
